--- a/app/views/admin/apj/resources/show.html.slim
+++ b/app/views/admin/apj/resources/show.html.slim
@@ -2,7 +2,7 @@
   span
     = link_to 'Resources', resources_path, class: 'panel_item-header_link'
     span.chevron.is-right
-    = @resource.name
+    b = @resource.name
 
 .page-body
   .panels
