--- a/app/views/admin/apj/api_groups/index.html.slim
+++ b/app/views/admin/apj/api_groups/index.html.slim
@@ -1,7 +1,7 @@
 div data-component='app#items_list'
   .page-title
     span
-      | Types
+      | API Groups
     .fl_r
       button.small_button.is-green data-role='items_list-show_form'
         | Add New
