--- a/app/views/admin/apj/endpoints/show.html.slim
+++ b/app/views/admin/apj/endpoints/show.html.slim
@@ -19,7 +19,7 @@
               .flexible-left
                 | Company
               .flexible-right
-                .small_button.is-icon.is-green
+                .small_button.is-icon.is-green data-view='app#popup_test'
                   = fa_icon 'plus'
                 .small_button.is-icon.is-red
                   = fa_icon 'remove'
